--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_marginEnd="104dp"
         android:layout_marginRight="104dp"
         android:fontFamily="sans-serif-medium"
-        android:onClick="openActivity"
+        android:onClick="enviarDatos"
         android:text="@string/boton"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#FFFDFD"
